hard-gists/3d99498d4236248f9bfbc8ed2fd424fa/run.log
=== Docker Run Log for 3d99498d4236248f9bfbc8ed2fd424fa ===
Started at: Mi 29. Okt 14:12:44 CET 2025

[2025-10-29 14:12:44] START: Running container for 3d99498d4236248f9bfbc8ed2fd424fa
[2025-10-29 14:12:45] SUCCESS: Container b4c682cd63cb3644c1de6b39010e6fd92e813ab1348afb87ccc604d7390ea0a2 started for 3d99498d4236248f9bfbc8ed2fd424fa
=== Container logs for 3d99498d4236248f9bfbc8ed2fd424fa ===
  File "/snippet.py", line 171
    print str(auc) + "  " + "H2O Ensemble" 
    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(...)?
=== End of logs for 3d99498d4236248f9bfbc8ed2fd424fa ===
[2025-10-29 14:12:47] INFO: Container b4c682cd63cb3644c1de6b39010e6fd92e813ab1348afb87ccc604d7390ea0a2 has stopped
